[package]
name = "rust_gb"
version = "0.1.0"
authors = ["Koichi <kuinniuk1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "4.0.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
sdl2 = "0.34.5"
